# txe

./: .gitignore  README.md  analysis_options.yaml  flutter_native_splash.yaml  pubspec.yaml
android/: build.gradle  gradle.properties  proguard-rules.pro
android/app/: build.gradle  google-services.json
ios/: Podfile  firebase_app_id_file.json
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_route.dart  app_route_observer.dart  firebase_options.dart  main.dart  splash_screen.dart
plugins/txe_app_bar/: README.md  pubspec.yaml
plugins/txe_app_constant/: README.md  pubspec.yaml
plugins/txe_app_store/: README.md  pubspec.yaml
plugins/txe_authorize/: README.md  pubspec.yaml
plugins/txe_backend_domain/: README.md  pubspec.yaml
plugins/txe_change_password/: README.md  pubspec.yaml
plugins/txe_config/: README.md  pubspec.yaml
plugins/txe_dashboard/: README.md  pubspec.yaml
plugins/txe_design_book_seet/: README.md  pubspec.yaml
plugins/txe_environment_chooser/: README.md  pubspec.yaml
plugins/txe_line/: README.md  pubspec.yaml
plugins/txe_pos_integrate/android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
plugins/txe_pos_integrate/android/repo/: atom-pos.aar
plugins/txe_pos_integrate/android/src/main/: AndroidManifest.xml
plugins/txe_pos_integrate/android/src/main/java/com/vietsens/txe/txe_pos_integrate/: BitmapUtil.java  BluetoothUtil.java  BytesUtil.java  ESCUtil.java  IcCardIsoProcessor.java  PicIsoProcessor.java  SunmiPrintHelper.java  TxePosIntegratePlugin.java
(+288 files in other folders)
